# Copyright (C) 2011-2014 Aratelia Limited - Juan A. Rubio
#
# This file is part of Tizonia
#
# Tizonia is free software: you can redistribute it and/or modify it under the
# terms of the GNU Lesser General Public License as published by the Free
# Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# Tizonia is distributed in the hope that it will be useful, but WITHOUT ANY
# WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
# FOR A PARTICULAR PURPOSE.  See the GNU Lesser General Public License for
# more details.
#
# You should have received a copy of the GNU Lesser General Public License
# along with Tizonia.  If not, see <http://www.gnu.org/licenses/>.


SUBDIRS = \
	aac_decoder \
	audio_renderer \
	audio_renderer_non_block \
	file_reader \
	file_writer \
	flac_decoder \
	http_renderer \
	mp3_decoder \
	mp3_encoder \
	mp3_metadata \
	ogg_demuxer \
	opus_decoder \
	vorbis_decoder \
	vp8_decoder \
	vp8_encoder \
	webp_decoder \
	webp_encoder \
	yuv_renderer

